# stats_with_python

./: README.md  pyproject.toml
notebooks/: basics.ipynb  central_limit.ipynb  distributions.ipynb
